error-holder-z-index-fix

--- a/css/interface.css
+++ b/css/interface.css
@@ -935,6 +935,7 @@ header .title-holder p {
   right: 0;
   padding: 15px;
   background-color: #eae9ec;
+  z-index: 2;
 }
 
 .errors-holder p {
